support post update state

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,21 +26,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="//unpkg.com/react@0.14/dist/react.min.js"></script>
-    <script src="//unpkg.com/react-dom@0.14/dist/react-dom.min.js"></script>
-    <script src="//unpkg.com/remotedev-app/dist/remotedev-app.min.js"></script>
-    <script>
-      window.remotedevOptions = {
-        hostname: location.hostname,
-        port: <%= port %>,
-        autoReconnect: true
-      };
-      ReactDOM.render(
-        React.createElement(RemoteDevApp, {
-          socketOptions: window.remotedevOptions
-        }),
-        document.querySelector('#root')
-      );
-    </script>
+    <script src="//jere.gitee.io/remotedev-app/js/app.bundle.js"></script>
   </body>
 </html>
